# projectOpenGL

./: .gitignore  CMakeLists.txt  README.md  main
dependencies/glad/: glad.h
src/: glad.c  main.cpp
